ingress/test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: echo-server
